--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
 /* Your CSS Code here. */
 .holder{
 	display:grid;
-	grid-template-columns:repeat(2,1fr);
-	grid-template-rows:repeat(2,1fr);
-	size:200px;
+	grid-template-columns:repeat(2,1fr) 100px 100px;
+	grid-template-rows:repeat(2,1fr) 100px 100px ;
 }
