--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,6 @@
 /* Your CSS Code here. */
 .holder{
 	display:grid;
-	grid-template-columns:repeat(2,1fr) 100px 100px;
-	grid-template-rows:repeat(2,1fr) 100px 100px ;
+	grid-template-columns:100px 100px;
+	grid-template-rows:100px 100px ;
 }
